<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/layout_forgotPassword"
    android:background="@drawable/shape_search_frame">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_close_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:text="@string/forgot_hint"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="36dp"
        android:text="@string/forgot_hint1"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/okay"
        android:layout_width="50dp"
        android:layout_height="28dp"
        android:layout_marginVertical="36dp"
        android:background="@drawable/shape_login_button"
        android:gravity="center"
        android:text="@string/signIn_ok"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_signInEmail" />

    <TextView
        android:id="@+id/textView87"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_margin="12dp"
        android:text="@string/forgot_hint2"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_margin="12dp"
        android:text="@string/forgot_hint3"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView87" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="86dp"
        android:text="@string/signIn_account"
        android:textColor="@color/navy_blue"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/editText_signInAccountInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ems="10"
        android:hint="@string/signIn_accountInput"
        android:inputType="text"
        android:maxLength="12"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/signIn_email"
        android:textColor="@color/navy_blue"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/editText_signInEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signIn_emailInput"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView27"
        app:layout_constraintStart_toStartOf="@+id/editText_signInAccountInput"
        app:layout_constraintTop_toTopOf="@+id/textView27" />
</androidx.constraintlayout.widget.ConstraintLayout>